prototyping added to portfolio and prototyping page

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 									<li><a href=""  class="btn btn-sm" data-filter=".machining" >Machining</a></li>
 									<li><a href=""  class="btn btn-sm" data-filter=".forming">Forming</a></li>
 									<li><a href="" class="btn btn-sm" data-filter=".assembling">Assembling</a></li>
-									<li><a href="" class="btn btn-sm" data-filter=".scanning">3D Scanning</a></li>
+									<li><a href="" class="btn btn-sm" data-filter=".technology">Technology</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -342,7 +342,7 @@
 						</figure>
 					</article>
 
-					<article class="isotopeItem scanning">
+					<article class="isotopeItem technology">
 						<figure class="imgWrapper">
 							<img alt="" src="images/portfolio/rb-promo-10-sm.png" class="img-responsive">
 							<figcaption class="mediaHover">
@@ -385,28 +385,28 @@
 						</figure>
 					</article>
 
-					<article class="isotopeItem machining">
+					<article class="isotopeItem technology">
 						<figure class="imgWrapper">
-							<img alt="" src="images/portfolio/rb-promo-2-sm.jpg" class="img-responsive">
+							<img alt="" src="images/portfolio/rb-promo-20-sm.png" class="img-responsive">
 							<figcaption class="mediaHover">
 
 								<div class="iconLinks"> 
-
-									<a href="images/portfolio/rb-promo-2.jpg" class="image-link" title="Full width image">
+								
+									<a href="images/portfolio/rb-promo-20-sm.png" class="image-link" title="Full width image">
 										<i class="icon-glyph-16 iconRounded"></i>
 									</a> 
 
-									<a href="portfolio-machining.html" class="sizer portfolioSheet" title="Learn More">
+									<a href="portfolio-prototyping.html" class="sizer portfolioSheet" title="Learn More">
 										<i class="ion-plus-circled iconRounded"></i>
 									</a> 
 
 								</div>
-								<h3>Click <a href="portfolio-machining.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
-
-								<h3>Machined Die</h3>
+								<h3>Click <a href="portfolio-prototyping.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+								<h3>Prototyping</h3>
 							</figcaption>
 						</figure>
 					</article>
+
 
 					<article class="isotopeItem assembling forming">
 						<figure class="imgWrapper">
@@ -460,28 +460,6 @@
 						</figure>
 					</article>
 
-					<article class="isotopeItem assembling forming">
-						<figure class="imgWrapper">
-							<img alt="" src="images/portfolio/rb-promo-8-sm.jpg" class="img-responsive">
-							<figcaption class="mediaHover">
-
-								<div class="iconLinks"> 
-								
-									<a href="images/portfolio/rb-promo-8.jpg" class="image-link" title="Full width image">
-										<i class="icon-glyph-16 iconRounded"></i>
-									</a> 
-
-									<a href="portfolio-tanks.html" class="sizer portfolioSheet" title="Learn More">
-										<i class="ion-plus-circled iconRounded"></i>
-									</a> 
-
-								</div>
-								<h3>Click <a href="portfolio-tanks.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
-								<h3>Hopper</h3>
-							</figcaption>
-						</figure>
-					</article>
-
 					<article class="isotopeItem assembling">
 						<figure class="imgWrapper">
 							<img alt="" src="images/portfolio/rb-promo-9-sm.jpg" class="img-responsive">
@@ -522,6 +500,29 @@
 								</div>
 								<h3>Click <a href="portfolio-conveyors.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
 								<h3>Warehouse Structures</h3>
+							</figcaption>
+						</figure>
+					</article>
+
+					<article class="isotopeItem machining">
+						<figure class="imgWrapper">
+							<img alt="" src="images/portfolio/rb-promo-2-sm.jpg" class="img-responsive">
+							<figcaption class="mediaHover">
+
+								<div class="iconLinks"> 
+
+									<a href="images/portfolio/rb-promo-2.jpg" class="image-link" title="Full width image">
+										<i class="icon-glyph-16 iconRounded"></i>
+									</a> 
+
+									<a href="portfolio-machining.html" class="sizer portfolioSheet" title="Learn More">
+										<i class="ion-plus-circled iconRounded"></i>
+									</a> 
+
+								</div>
+								<h3>Click <a href="portfolio-machining.html"><i class="ion-plus-circled"></i></a> to learn more</h3>
+
+								<h3>Machined Die</h3>
 							</figcaption>
 						</figure>
 					</article>
