--- a/portfolio-prototyping.html
+++ b/portfolio-prototyping.html
@@ -80,28 +80,43 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 mb30">
-                            <img src="images/portfolio/rb-promo-12.png" alt="3D Scanning Overview" class="img-responsive"/>
+                            <img src="images/portfolio/rb-promo-14.png" alt="Prototype Solid" class="img-responsive"/>
+                        </div>
+                        <div class="col-md-12 mb30">
+                            <img src="images/portfolio/rb-promo-15.png" alt="Prototype Hidden Lines" class="img-responsive"/>
                         </div>
                         <div class="col-md-6 mb30">
-                            <img alt="" src="images/portfolio/rb-promo-13.png" class="img-responsive">
+                            <img alt="" src="images/portfolio/rb-promo-16.png" class="img-responsive">
                         </div>
                         <div class="col-md-6 mb30">
-                            <h2>Overview</h2>
-                            <p>Our prototyping services will turn your ideas into workable, physical models. Working from nothing but a concept, we are able to produce everything you’ll need to move forward. </p>
-                            <hr>
-                            <br>
-                            <h2>Process</h2>
-                            <p>Starting with as little as nothing, we begin by sitting down and discussing things like application, needs and limitations. We then begin the 3D computer-aided design process. This allows us to check implementation requirements and environments needs. If necessary, we are also able to run Stress Reporting. Once the design has been approved for prototype manufacturing we make the first revision.</p>
-                            <hr>
-                            <br>
-                            <h2>Extended Benefits</h2>
-                            <p>Because we begin with computer-aided design models, we are capable of exporting a variety of file formats for leveraging today’s cutting edge technologies. Aside from manufacturing benefits we gain from computer-aided design models, we are also able to leverage them to create inspiring and effective marketing materials.</p>
+                            <img alt="" src="images/portfolio/rb-promo-17.png" class="img-responsive">
                         </div>
                     </div>
                 </div>
             </section>
             <!-- / images -->
 
+
+             <!-- infos -->
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h2>Overview</h2>
+                            <p>Our prototyping services will turn your ideas into workable, physical models. Working from nothing but a concept, we are able to produce everything you’ll need to move forward. </p>
+                        </div>
+                        <div class="col-md-4">
+                            <h2>Process</h2>
+                            <p>Starting with as little as nothing, we begin by sitting down and discussing things like application, needs and limitations. We then begin the 3D computer-aided design process. This allows us to check implementation requirements and environments needs. If necessary, we are also able to run Stress Tests to simulate real world forces and loads. Once the design has been approved for prototype manufacturing we make the first revision.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h2>Extended Benefits</h2>
+                            <p>Because we begin with computer-aided design models, we are capable of exporting a variety of file formats for leveraging today’s cutting edge technologies. Aside from manufacturing benefits we gain from computer-aided design models, we are also able to leverage them to create inspiring and effective marketing materials.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- / infos -->
 
 
             <!-- call to action -->
