--- a/index.html
+++ b/index.html
@@ -867,5 +867,10 @@
 		  firebase.initializeApp(config);
 		</script>
 		<!-- firebase --> 
+
+
+
+		<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us13.list-manage.com","uuid":"a81cc828f653e4d3b5eabc2f8","lid":"b2d6643172"}) })</script>
+		
 	</body>
 	</html>
