--- a/index.html
+++ b/index.html
@@ -149,7 +149,41 @@
 								</div>
 							</div> 
 
+
+							<br>
+							<br>
+
+
 							<a href="#about" class="homeBtn btn scrollLink"><i class="icon-down"></i>learn more</a>
+
+
+							<br>
+							<br>
+							<br>
+							<br>
+							
+							<!-- Begin MailChimp Signup Form -->
+							<div id="mc_embed_signup">
+							<form style="background-color: rgba(0,0,0,0.6); width: 40%; padding: 20px; margin: 0 auto; border-radius: 8px;" action="//tobiasrobertbrysiewicz.us13.list-manage.com/subscribe/post?u=a81cc828f653e4d3b5eabc2f8&amp;id=d1234e69f5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							    <div id="mc_embed_signup_scroll">
+							    <h2>Newsletter Sign Up</h2>
+							<div class="mc-field-group">
+								
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="background-color: rgba(255,255,255,0.2); color: white; font-size: 24px; display: inline; outline: none; border: 0px; padding: 5px; width: 70%; text-align: center;" placeholder="email address">
+							</div>
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a81cc828f653e4d3b5eabc2f8_d1234e69f5" tabindex="-1" value=""></div>
+							    <div class="clear"><input style="display: inline; margin-top: 10px; font-size: 24px; background-color: teal; border: 0px; border-radius: 4px; padding: 10px; color: white; width: 50%;" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							    </div>
+							</form>
+							</div>
+							<!--End mc_embed_signup-->
+
+
+
 						</div>
 					</div>
 				</div>
@@ -871,6 +905,6 @@
 
 
 		<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us13.list-manage.com","uuid":"a81cc828f653e4d3b5eabc2f8","lid":"d1234e69f5"}) })</script>
-		
+
 	</body>
 	</html>
