--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 
 							
-							<!-- Begin MailChimp Signup Form -->
+							<!-- Begin MailChimp Signup Form 
 							<div id="mc_embed_signup">
 							<form action="//tobiasrobertbrysiewicz.us13.list-manage.com/subscribe/post?u=a81cc828f653e4d3b5eabc2f8&amp;id=d1234e69f5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate newsletter" target="_blank" novalidate>
 							    <div id="mc_embed_signup_scroll">
@@ -171,13 +171,13 @@
 								<div id="mce-responses" class="clear">
 									<div class="response" id="mce-error-response" style="display:none"></div>
 									<div class="response" id="mce-success-response" style="display:none"></div>
-								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								</div> 
 							    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a81cc828f653e4d3b5eabc2f8_d1234e69f5" tabindex="-1" value=""></div>
 							    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button newsletter-button"></div>
 							    </div>
 							</form>
 							</div>
-							<!--End mc_embed_signup-->
+							End mc_embed_signup-->
 
 
 
@@ -188,6 +188,60 @@
 			<!-- / home -->
 
 			<!-- about us -->
+			<section class="slice" id="about">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 headingCenter">
+							<h1>A Chicagoland Engineering Company</h1>
+							<h2 class="subTitle"><i>since 1981</i></h2>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-4 about-left">
+							<h2>What We Do</h2>
+
+							<ul>
+								<li>Custom Manufacturing</li>
+								<li>Reverse Engineering</li>
+								<li>Parts & Assemblies</li>
+								<li>Machinery & Equipment</li>
+								<li>Long Run & Short Run</li>
+								<li>Heighten Integrity of Parts</li>
+								<li>Design Assistance</li>
+								<li>On-Site Installations</li>
+							</ul>
+
+						</div>
+
+						<div class="col-sm-4"> <img src="images/rb-nav-4.png" alt="services" class="img-responsive"> </div>
+
+						<div class="col-sm-4 about-right">
+							<h2>What We Know</h2>
+							
+							<ul>
+								<li>Printing Machinery</li>
+								<li>Packaging Machinery</li>
+								<li>Medical Enclosures</li>
+								<li>Aerospace Enclosures</li>
+								<li>FDA Approved Equipment</li>
+								<li>FAA Approved Assemblies</li>
+								<li>Production Line Conveyors</li>
+								<li>Urethane Molding</li>
+								<li>Silicone Molding</li>
+								<li>Tool & Die Casts</li>
+							</ul>
+
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- / about us -->
+			<hr />
+
+
+
+			<!-- about us 
 			<section class="slice" id="about">
 				<div class="container">
 					<div class="row">
@@ -219,10 +273,8 @@
 					</div>
 				</div>
 			</section>
-			<!-- / about us -->
 			<hr />
-
-
+			/ about us -->
 
 
 			<!-- services
@@ -568,12 +620,12 @@
 				<div class="maskParent">
 					<div class="maskOverlay opacity-6"></div>
 					<div class="parallaxText">
-						<blockquote class="mt15">
-							<p>
-								Thank You<br/>
-								For Your Time<br/><small>Robert Brysiewicz </small>
-							</p>
-						</blockquote>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
 					</div>
 				</div>
 			</section>
